--- a/Aurora/ios/Podfile
+++ b/Aurora/ios/Podfile
@@ -8,6 +8,8 @@ target 'Aurora' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'AuroraTests' do
     inherit! :complete
     # Pods for testing
