--- a/Aurora/package.json
+++ b/Aurora/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
