--- a/Aurora/package.json
+++ b/Aurora/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.10.0",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "firebase": "^7.24.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-actions-sheet": "^0.3.5",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
