--- a/Aurora/ios/Podfile
+++ b/Aurora/ios/Podfile
@@ -10,6 +10,8 @@ target 'Aurora' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'AuroraTests' do
     inherit! :complete
     # Pods for testing
