--- a/Aurora/package.json
+++ b/Aurora/package.json
@@ -24,7 +24,9 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-swiper": "^1.6.0-rc.3",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.0-alpha8",
+    "react-native-video-controls": "^2.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
